--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/support": "^6.0"
+        "illuminate/support": "^6.0",
+        "staudenmeir/laravel-upsert": "^1.0",
+        "nwidart/laravel-modules": "^6.2"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
